agent-network/2.0/modules/ROOT/pages/af-deploy-agent-network-targets.adoc
[[deploy-instances]]
= Deploy Agent Network Instances
:page-aliases: anypoint-code-builder::af-deploy-agent-network-targets.adoc

Deploy your agent network instance to a CloudHub 2.0 shared space, a CloudHub 2.0 private space, or to a Runtime Fabric target. Agent network deployments are available on US Cloud and EU Cloud hosts only. For more information, see xref:hosting-home::index.adoc#control-plane-hosting-options[Control Plane Hosting Options].

Additionally, agent brokers follow the same monthly patching cadence as CloudHub 2.0. For the update schedule, see xref:release-notes::cloudhub-2/cloudhub-2-runtimes-release-notes.adoc#mulesoft-commercial-cloud-schedule[MuleSoft Commercial Cloud Schedule].

== Agent Network Deployments and Omni Gateway

When you deploy, Omni Gateway secures inbound traffic to your agent network and outbound traffic from your brokers, agents, and MCP servers.

Omni Gateway applies these policies automatically at deployment.

[%header,cols="20,40a"]
|===
|Agent Type|Policy
|Broker
|

** A2A Agent Card policy
** Tracing policy
** Agent Connection Telemetry policy

|Agent

(ingress and egress)
|

** A2A Agent Card policy
** Tracing policy
** Agent Connection Telemetry policy

|MCP Server

(ingress and egress)
|

** MCP Support policy
** Tracing policy
** Agent Connection Telemetry policy

|===

=== Last-Mile Security Considerations for Agent Networks

Agent networks in version 2.0 don't support Last-Mile Security for outbound (egress) traffic on the Omni Gateway. If you have enabled Last-Mile Security, the agent network deploys and the broker can answer general questions, but it can't route requests to downstream agents or MCP servers.

Agent networks route outbound traffic through the egress gateway (on port 8082, cluster endpoint). Last-Mile Security enforces TLS on the ingress-gateway-to-pod hop. The outbound path bypasses this hop, so the
connections can't be established.

If your deployment requires Last-Mile Security for other applications, deploy your agent network to a separate egress gateway that has Last-Mile Security disabled.

The broker's `egressgw.url` resolving to the cluster endpoint is expected behavior, regardless of the Last-Mile Security setting.

[[before-you-begin]]
== Before You Begin

Make sure you review the xref:af-get-started.adoc#before-you-begin[prerequisites for setting up agent network gateways and deployment targets].

[IMPORTANT]
====
Redeploying an agent network to a different target or gateway (for example, switching between a shared space and a private space, or changing to a different gateway) is not supported and fails with a Runtime Manager error. To deploy to a different target or gateway, first manually delete the existing Runtime Manager application, then redeploy.
====

When you deploy your agent network, the system deploys one instance for each connection defined in your agent network. If your agent network contains brokers, the system deploys one instance per broker.

[[deploy-dev-agent]]
== Deploy Your Network Using MuleSoft Vibes

Use MuleSoft Vibes to deploy your agent network instances. For more information, see xref:anypoint-code-builder::vibes-api-ai-create-spec.adoc[].

. In the Anypoint Code Builder activity bar, click the agent icon image:af-acb-dev-agent-icon.png["",18,18].
. Tell the agent that you want to deploy your agent network. MuleSoft Vibes does the rest.

To get started, try one of these suggested messages.

* Deploy my agent network project to the production environment.
* Deploy the hello-world-network project to staging.
* Deploy agent network project at /path/to/project to dev environment with specific gateways.
* Deploy my agent network to CloudHub 2.0.

[[deploy-acb]]
== Deploy Your Network Using Anypoint Code Builder

Deploy your agent network instance to a CloudHub 2.0 space or Runtime Fabric target directly from Anypoint Code Builder.

. If you're not logged in already, log in to your Anypoint Platform account.
. In Anypoint Code Builder, choose one of the following:
  . In Explorer, right-click a project file and select *Deploy Agent Network*.
  . From the Command Palette, run this command: *MuleSoft: Deploy Agent Network*.
. In Deploy Agent Network, specify the environment, target space, gateways, and other deployment information. If you don't see any deployment targets to select, then you need to set up your target deployment space and set up gateways. For instructions, see xref:af-get-started.adoc[Get Started with Agent Networks].
. Select *Deploy*.
. Your instances are now deployed and ready to test. The system deploys one instance for each connection defined in your agent network. If your agent network contains brokers, the system deploys one instance per broker.

Next, discover your agent network assets in *Agents & Tools* in Exchange, view your agent network in Agent Visualizer, apply a governance policy in API Manager, or monitor your agent network activity in Anypoint Monitoring.

[[undeploy-dev-agent]]
== Undeploy Your Network Using MuleSoft Vibes

Use MuleSoft Vibes to undeploy your agent network instances. For more information, see xref:anypoint-code-builder::vibes-api-ai-create-spec.adoc[].

. In the Anypoint Code Builder activity bar, click the agent icon image:af-acb-dev-agent-icon.png["",18,18].
. Tell MuleSoft Vibes that you want to undeploy your agent network. MuleSoft Vibes does the rest.

To get started, try one of these suggested messages.

* Undeploy my agent network project from the production environment.
* Undeploy the [project-name] project from staging.
* Undeploy agent network project at /path/to/project from dev environment.

[[undeploy-acb]]
== Undeploy Your Network Using Anypoint Code Builder

Undeploy your agent network instances directly from Anypoint Code Builder. When you undeploy, all API instances and applications in the agent network are stopped and runtime resources are removed.

. If you're not logged in already, log in to your Anypoint Platform account.
. In Anypoint Code Builder, choose one of the following:
  . In the Explorer view, right-click a project file and select *Undeploy Agent Network*.
  . From the Command Palette, run this command: *MuleSoft: Undeploy Agent Network*.
. In the confirmation dialog, select *Undeploy*.
. Anypoint Code Builder removes all deployed runtime resources. For details, check the Agent Fabric CLI output logs.

[[deploy-cli]]
== Deploy or Undeploy a Network Using the Anypoint CLI

If you run operations within a CI/CD environment, use Anypoint CLI plugin to set up, create, build, publish, unpublish, deploy, and undeploy agent networks. For more information, see xref:af-build-agent-networks-in-a-ci-cd-environment.adoc[].

[[resolve-issues]]
== Resolve Agent Network Deployment Errors in Anypoint Code Builder

If you try to deploy an agent network project and see errors related to CLI version, install the latest Anypoint Code Builder version (1.24.1 or later) and then rebuild, republish, and deploy your project.

If you try to deploy an agent network project and see errors related to invalid API metadata, use API Manager to delete existing API instances that were created with previous a Anypoint Code Builder version. Then rebuild, republish, and deploy your project.

== See Also

* xref:af-project-files.adoc[]
* xref:general::agent-fabric-overview.adoc[Agent Fabric Overview]
* https://blogs.mulesoft.com/news/managed-omni-gateway-in-shared-spaces-with-unified-traffic-control/[Managed Omni Gateway in Shared Spaces with Unified Traffic Control]